bug fix: list item bullets not showing in high contrast mode

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -309,21 +309,11 @@ select {
   ul {
     padding-left: 0;
     margin-bottom: 1.2rem;
-    list-style-type: none;
-
+    padding-left: 1.2rem; 
     li {
-      padding-left: 1.2rem;
       position: relative;
-
-      &::before {
-        position: absolute;
-        content: "";
-        height: 8px;
-        width: 8px;
-        border-radius: 50%;
-        background: $color-primary;
-        left: 3px;
-        top: 14px;
+      &::marker {
+        color: $color-primary;
       }
     }
   }
