--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -168,6 +168,7 @@ video {
       }
     }
   }
+
   .card-header {
     overflow: hidden;
     border-bottom-right-radius: 0 !important;
@@ -196,22 +197,15 @@ video {
   ul {
     padding-left: 0;
     margin-bottom: 1.2rem;
-    list-style-type: none;
+    padding-left: 1.2rem;
+    list-style-type: disc;
+
+    ul {
+      list-style: circle;
+    }
 
     li {
-      padding-left: 1.2rem;
-      position: relative;
-
-      &::before {
-        position: absolute;
-        content: "";
-        height: 8px;
-        width: 8px;
-        border-radius: 50%;
-        background: $color-primary;
-        left: 3px;
-        top: 14px;
-      }
+      position: relative;  
     }
   }
 }
